tests/rgs/valid/multiple_when_blocks.rgs
ACTION run.
ACTION hide.
EVENT  spotted ENVIRONMENT.
EVENT  lost    ENVIRONMENT.

DURING ALWAYS:
    WHEN spotted ENVIRONMENT:
        DO run.
    WHEN lost ENVIRONMENT:
        DO hide.
