tests/rgs/syntax_errors/during_missing_story.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
DURING:
    WHEN spotted ENVIRONMENT:
        DO run.
